# cjm-context-graph-projection

./: README.md  pyproject.toml
cjm_context_graph_projection/: authoring.py  cli.py  code_edges.py  cohesion.py  contradictions.py  conventions.py  devgraph.py  display.py  explorer_page.py  factlayer.py  hybrid_page.py  journal.py  lens.py  listing.py  module_ops.py  onboarding.py  oracle.py  projection.py  readiness.py  readme.py  reconcile.py  refactor.py  refactor_ops.py  registers.py  rename_ops.py  render.py  runtime.py  seeds.py  serve.py  source_state.py  structure.py  viz.py  worklist.py  write.py
tests/: test_add_symbol_router.py  test_authoring_units.py  test_cli_m3_smoke.py  test_code_edges.py  test_cohesion.py  test_conventions_resolve.py  test_devgraph.py  test_display.py  test_flip_to_py.py  test_journal.py  test_lens.py  test_listing.py  test_module_ops.py  test_mutates_conformance.py  test_projection_units.py  test_readiness.py  test_readme.py  test_refactor.py  test_refactor_ops.py  test_registers.py  test_rename_ops.py  test_seeds_render.py  test_source_state.py  test_subgraph.py
tests_manual/: authoring.py  code_on_graph.py  divergence_probe.py  inc3_first_slice.py  inc4_dogfood.py  journal_rebuild.py  m2b_shadow.py  m3_cutover.py  module_ops.py  move.py  rename.py  session_start_sequence.py  structure.py  viz.py
