[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-context-graph-projection"
dynamic = ["version"]
description = "Projection and navigation core for context graphs: bounded, ranked, provenance-carrying reads (schema / state / relevance / show) over any cjm-substrate context graph, with a CLI driver. The agent-facing read layer of the self-hosting graph arc."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    'cjm-substrate',
    'cjm-context-graph-layer>=0.0.7',
    'cjm-context-graph-primitives>=0.0.12',
    'cjm-dev-graph-schema>=0.0.5',
    'cjm-markdown-decompose-core>=0.0.1',
    'cjm-python-decompose-core>=0.0.1',
    'cjm-notebook-decompose-core>=0.0.1',
]

[project.scripts]
cjm-context-graph = "cjm_context_graph_projection.cli:main"

[project.urls]
Repository = "https://github.com/cj-mills/cjm-context-graph-projection"

[tool.setuptools.dynamic]
version = {attr = "cjm_context_graph_projection.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_context_graph_projection*"]
